chore: add get me on IDL
