# packages/idl/gen/typescript-fetch/apis/UserApi.ts
@@ -1,0 +1,58 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Empathy
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  User,
+} from '../models';
+import {
+    UserFromJSON,
+    UserToJSON,
+} from '../models';
+
+/**
+ * 
+ */
+export class UserApi extends runtime.BaseAPI {
+
+    /**
+     * Get me
+     * Me
+     */
+    async getMeRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<User>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        const response = await this.request({
+            path: `/me`,
+            method: 'GET',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse(response, (jsonValue) => UserFromJSON(jsonValue));
+    }
+
+    /**
+     * Get me
+     * Me
+     */
+    async getMe(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<User> {
+        const response = await this.getMeRaw(initOverrides);
+        return await response.value();
+    }
+
+}
